--- a/app/src/main/res/layout/activity_detail_event.xml
+++ b/app/src/main/res/layout/activity_detail_event.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ui.detail_events.DetailEventActivity">
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
     <ImageView
         android:id="@+id/imgLogo"
         android:layout_width="match_parent"
+        android:layout_gravity="center"
         android:layout_height="200dp" />
 
     <TextView
@@ -67,5 +72,5 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:text="@string/register" />
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
