--- a/app/src/main/res/layout/activity_detail_event.xml
+++ b/app/src/main/res/layout/activity_detail_event.xml
@@ -1,76 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.detail_events.DetailEventActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imgLogo"
-        android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:layout_height="200dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvEventName"
-        style="@style/TextviewDetailEvent"
-        android:layout_marginBottom="16dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        tools:text="Name Event" />
+            <ImageView
+                android:id="@+id/imgLogo"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_gravity="center" />
 
-    <TextView
-        style="@style/TextviewDetailEvent"
-        android:text="@string/eventOwnerName" />
+            <TextView
+                android:id="@+id/tvEventName"
+                style="@style/TextviewDetailEvent"
+                android:layout_marginBottom="16dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="Name Event" />
 
-    <TextView
-        android:id="@+id/tvEventOwnerName"
-        style="@style/TextviewDetailEvent"
-        android:layout_marginBottom="8dp"
-        android:textStyle="bold"
-        tools:text="Abdi Setyawan" />
+            <TextView
+                style="@style/TextviewDetailEvent"
+                android:text="@string/eventOwnerName" />
 
-    <TextView
-        style="@style/TextviewDetailEvent"
-        android:text="@string/eventDate" />
+            <TextView
+                android:id="@+id/tvEventOwnerName"
+                style="@style/TextviewDetailEvent"
+                android:layout_marginBottom="8dp"
+                android:textStyle="bold"
+                tools:text="Abdi Setyawan" />
 
-    <TextView
-        android:id="@+id/tvEventDate"
-        style="@style/TextviewDetailEvent"
-        android:layout_marginBottom="8dp"
-        android:textStyle="bold"
-        tools:text="January 2080" />
+            <TextView
+                style="@style/TextviewDetailEvent"
+                android:text="@string/eventDate" />
 
-    <TextView
-        style="@style/TextviewDetailEvent"
-        android:text="@string/eventSpaceLeft" />
+            <TextView
+                android:id="@+id/tvEventDate"
+                style="@style/TextviewDetailEvent"
+                android:layout_marginBottom="8dp"
+                android:textStyle="bold"
+                tools:text="January 2080" />
 
-    <TextView
-        android:id="@+id/tvEventAvailableSeats"
-        style="@style/TextviewDetailEvent"
-        android:layout_marginBottom="8dp"
-        android:textStyle="bold"
-        tools:text="777" />
+            <TextView
+                style="@style/TextviewDetailEvent"
+                android:text="@string/eventSpaceLeft" />
 
-    <TextView
-        android:id="@+id/tvEventDescription"
-        style="@style/TextviewDetailEvent"
-        android:layout_marginBottom="8dp"
-        tools:text="Deadpool" />
+            <TextView
+                android:id="@+id/tvEventAvailableSeats"
+                style="@style/TextviewDetailEvent"
+                android:layout_marginBottom="8dp"
+                android:textStyle="bold"
+                tools:text="777" />
 
-    <Button
-        style="?attr/appBarLayoutStyle"
-        android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tvEventDescription"
+                style="@style/TextviewDetailEvent"
+                android:layout_marginBottom="8dp"
+                tools:text="Deadpool" />
+
+            <Button
+                android:id="@+id/btnRegister"
+                style="?attr/appBarLayoutStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="@string/register" />
+        </LinearLayout>
+    </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/register" />
-    </LinearLayout>
-</ScrollView>
+        android:layout_gravity="center" />
+</FrameLayout>
