--- a/app/src/main/res/layout/fragment_upcoming_events.xml
+++ b/app/src/main/res/layout/fragment_upcoming_events.xml
@@ -5,7 +5,7 @@
     android:id="@+id/upcomingEventsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.upcomingEvents.UpcomingEventsFragment">
+    tools:context=".ui.upcoming_events.UpcomingEventsFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -21,7 +21,7 @@
         android:id="@+id/rvUpcomingEvents"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
