add home fragment to add home navigation

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,5 +11,10 @@
         android:icon="@drawable/upcoming_event"
         android:title="@string/upcoming_event" />
 
+    <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/home"
+        android:title="@string/home" />
+
 
 </menu>
