--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,4 +15,9 @@
         android:name="com.example.decodingevents.ui.finished_events.FinishedEventsFragment"
         android:label="fragment_finished_events"
         tools:layout="@layout/fragment_finished_events" />
+    <fragment
+        android:id="@+id/navigation_home"
+        android:name="com.example.decodingevents.ui.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
