add searchView for upcoming and finished events list

--- a/app/src/main/res/layout/fragment_finished_events.xml
+++ b/app/src/main/res/layout/fragment_finished_events.xml
@@ -4,17 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.finished_events.FinishedEventsFragment">
+    tools:context=".ui.events.finished_events.FinishedEventsFragment">
+
+    <com.google.android.material.search.SearchBar
+        android:layout_width="0dp"
+        android:id="@+id/searchBar"
+        android:layout_height="wrap_content"
+        android:hint="@string/search_here"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+    
+    <com.google.android.material.search.SearchView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:hint="@string/search_here"
+        app:layout_anchor="@id/searchBar"
+        android:id="@+id/searchView"
+        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvFinishedEvents"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
     <ProgressBar
         android:id="@+id/progressBar"
