--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/navigation_finished_events">
+    app:startDestination="@id/navigation_home">
 
     <fragment
         android:id="@+id/navigation_upcoming_events"
-        android:name="com.example.decodingevents.ui.upcoming_events.UpcomingEventsFragment"
+        android:name="com.example.decodingevents.ui.events.upcoming_events.UpcomingEventsFragment"
         android:label="fragment_upcoming_events"
         tools:layout="@layout/fragment_upcoming_events" />
     <fragment
         android:id="@+id/navigation_finished_events"
-        android:name="com.example.decodingevents.ui.finished_events.FinishedEventsFragment"
+        android:name="com.example.decodingevents.ui.events.finished_events.FinishedEventsFragment"
         android:label="fragment_finished_events"
         tools:layout="@layout/fragment_finished_events" />
     <fragment
@@ -20,4 +20,10 @@
         android:name="com.example.decodingevents.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="com.example.decodingevents.ui.settings.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
