adding retrofit and room to make local database and save it when offline; making theme setting

--- a/app/src/main/res/layout/card_view_item.xml
+++ b/app/src/main/res/layout/card_view_item.xml
@@ -31,6 +31,18 @@
             card_view:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
 
+        <ImageView
+            android:id="@+id/iv_favourite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:tag="Not Saved"
+            android:contentDescription="@string/save_favourite"
+            android:src="@drawable/ic_unbookmarked"
+            card_view:layout_constraintEnd_toEndOf="@id/img_item"
+            card_view:layout_constraintTop_toTopOf="@+id/img_item" />
+
         <TextView
             card_view:layout_goneMarginTop="8dp"
             android:padding="8dp"
