--- a/app/src/main/res/layout/card_view_item.xml
+++ b/app/src/main/res/layout/card_view_item.xml
@@ -33,11 +33,13 @@
 
         <ImageView
             android:id="@+id/iv_favourite"
+            android:background="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:tag="Not Saved"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@string/save_favourite"
             android:src="@drawable/ic_unbookmarked"
             card_view:layout_constraintEnd_toEndOf="@id/img_item"
