--- a/app/src/main/res/layout/activity_detail_event.xml
+++ b/app/src/main/res/layout/activity_detail_event.xml
@@ -2,14 +2,13 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginBottom="16dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     tools:context=".ui.detail_events.DetailEventActivity">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,13 +17,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="48dp"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imgLogo"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:contentDescription="TODO" />
 
             <TextView
                 android:id="@+id/tvEventName"
@@ -73,15 +74,34 @@
                 android:layout_marginBottom="8dp"
                 tools:text="Deadpool" />
 
-            <Button
-                android:id="@+id/btnRegister"
-                style="?attr/appBarLayoutStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:text="@string/register" />
         </LinearLayout>
+
     </ScrollView>
+
+    <Button
+        android:padding="8dp"
+        android:id="@+id/btnRegister"
+        style="?attr/appBarLayoutStyle"
+        android:layout_gravity="bottom"
+        android:layout_width="300dp"
+        android:layout_marginBottom="16dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:text="@string/register" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_button"
+        android:layout_marginBottom="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/ic_unbookmarked"
+        android:contentDescription="@string/favourie"
+        style="?attr/floatingActionButtonStyle"
+        app:elevation="0dp"
+        app:pressedTranslationZ="0dp" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
