--- a/app/src/main/res/layout/activity_detail_event.xml
+++ b/app/src/main/res/layout/activity_detail_event.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
-                android:contentDescription="TODO" />
+                android:contentDescription="@string/image_logo" />
 
             <TextView
                 android:id="@+id/tvEventName"
