--- a/app/src/main/res/layout/card_view_item.xml
+++ b/app/src/main/res/layout/card_view_item.xml
@@ -30,7 +30,7 @@
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars"
-            android:contentDescription="TODO" />
+            android:contentDescription="@string/image_logo" />
 
         <TextView
             card_view:layout_goneMarginTop="8dp"
