--- a/app/src/main/res/layout/card_view_item.xml
+++ b/app/src/main/res/layout/card_view_item.xml
@@ -7,12 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginStart="8dp"
     android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
     android:layout_marginBottom="4dp"
     card_view:cardCornerRadius="6dp"
-    card_view:cardElevation="6dp"
     card_view:cardUseCompatPadding="true"
     android:foreground="?attr/selectableItemBackground">
 
@@ -35,6 +32,7 @@
         <TextView
             card_view:layout_goneMarginTop="8dp"
             android:padding="8dp"
+            android:maxLines="2"
             android:id="@+id/tvEventsTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
