--- a/app/src/main/res/layout/fragment_upcoming_events.xml
+++ b/app/src/main/res/layout/fragment_upcoming_events.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.events.upcoming_events.UpcomingEventsFragment">
 
+    <include
+        android:id="@+id/favToolbar"
+        layout="@layout/favourite_toolbar"
+        />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?attr/appBarLayoutStyle"
@@ -19,11 +24,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUpcomingEvents"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/favToolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
